kubernetes/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerodowntime-blue-service
spec:
  selector:
    app: zerodowntime
    version: blue

  ports:
    - port: 80
      targetPort: 3000
