kubernetes/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerodowntime-green-service
spec:
  selector:
    app: zerodowntime
    version: green

  ports:
    - port: 80
      targetPort: 3000
