kubernetes/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: zerodowntime-service

  namespace: production
spec:

  selector:
    app: zerodowntime

  ports:

  - protocol: TCP

    port: 80

    targetPort: 3000

  type: NodePort
