kubernetes/canary-blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zerodowntime-blue-ingress
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zerodowntime-blue-service
                port:
                  number: 80
